Add data structure for language

--- a/DurgaToy/DurgaToy.fsproj
+++ b/DurgaToy/DurgaToy.fsproj
@@ -48,6 +48,8 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="Packrat.fs" />
+    <Compile Include="Model.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
     <Content Include="packages.config" />
